# test_imu

./: .clang-format  CMakeLists.txt  README.md  eval_all.sh  gt.boss  imu_gps_optimized.boss  nclt_gtsam.csv  package.xml  synthetic.config
data/: KittiGps.txt  KittiImuBiasedMetadata.txt
data/nclt/: gps.csv  gps_rtk.csv  gps_rtk_err.csv
docker/: Dockerfile  build.sh  run_docker.sh
docker/src/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  compute_rpe.cpp  example_imu_gps_synthetic.cpp  example_kitti_imu_gps.cpp  example_kitti_imu_gps_gtsam.cpp  graph_viz.cpp  imu_gps_synthetic.cpp  integrate_trajectory.cpp  nclt.cpp  nclt_gtsam.cpp  synthetic_gtsam.cpp  synthetic_run.cpp  test.cpp  test_single_factor.cpp  test_ukf.cpp  view_graph.cpp
scripts/: plot_csv.py  vizcovariance.py  vizposes.py
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  common.cpp  common.h  manifold.h  manifold_impl.cpp  ukf.h  unscented.h  unscented_impl.cpp
src/imu_preintegrator/: CMakeLists.txt  imu_preintegrator.cpp  imu_preintegrator.h  imu_preintegrator_base.cpp  imu_preintegrator_base.h  imu_preintegrator_slim.cpp  imu_preintegrator_slim.h  imu_preintegrator_ukf.cpp  imu_preintegrator_ukf.h
src/synthetic/: CMakeLists.txt  synthetic.cpp  synthetic.h
src/variables_and_factors/: CMakeLists.txt  gps_factor.cpp  gps_factor.h  gps_factor_ad.cpp  gps_factor_ad.h  imu_preintegration_factor.cpp  imu_preintegration_factor.h  instances.cpp  instances.h  variable_se3_expmap_right.cpp  variable_se3_expmap_right.h
